--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI =mongodb+srv://dante:5Fo6g7obGDoVy7B0@cluster0.piudi.mongodb.net/ticket
+JWT_SECRET = abc123
+ CLIENT_ID = 149411413635-rt43e7o5o80d4muu0907kkg1flub4nkr.apps.googleusercontent.com
+ CLEINT_SECRET = -wVDi1Q5P4Acgv2Bz0ablh-C
+ REDIRECT_URI = https://developers.google.com/oauthplayground
+ REFRESH_TOKEN = 1//04tIWGIihKc9ICgYIARAAGAQSNwF-L9IrcJwzCrumxPvfI4qGDSFfBBz4f2RwxKp_iU5pQp_G8jX9rwhR45iWXRoEuTrEZ_XqIOA
