--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "google-auth-library": "^7.1.2",
+    "immutability-helper": "^3.1.1",
+    "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.6.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.14.0",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.4",
@@ -43,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^0.19.1"
   }
 }
