--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
-    "npm": "^7.19.0"
+    "npm": "^7.19.0",
+    "sendmail": "^1.6.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
