--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "google-auth-library": "^7.1.2",
     "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "nodemailer": "^6.6.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
+    "react-chartist": "^0.14.4",
     "react-dom": "^16.14.0",
     "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
@@ -23,7 +27,7 @@
     "react-redux": "^7.2.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^1.1.5",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
