--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
     "npm": "^7.19.0",
+    "react-bootstrap": "^0.32.4",
     "sendmail": "^1.6.1"
   },
   "devDependencies": {
